fix nav color on mobile, add modified theme files

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2556,7 +2556,7 @@ embed {
     margin: 0;
     width: 100%;
     padding: 0;
-    background: #fff;
+    background: #17181c;
     border-bottom: 1px solid #ddd;
     z-index: 1030;
   }
